separate DTOs for requests and responses + major service improvements
- Replaced shared DTOs with distinct Request and Response DTOs across entities
- Refactored mappers (MenuItemMapper, QRCodeMapper, SettingMapper, etc.) for proper data transformation
- Fixed missing itemImage persistence in MenuItemMapper
- Updated createMenuItem() to support multipart form-data upload with file handling
- Improved error handling in controllers (MenuItemController, QRCodeController, PlanController)
- Added structured ResponseEntity responses with clear error and success codes
- Enhanced SettingsServiceImpl and QRCodeServiceImpl for correct hotel and menu associations
- Fixed “IdentifierGenerationException” by validating entity relationships before saving
- Cleaned up repository method usage and added missing validations
- Improved overall DTO mapping consistency and backend response clarity