@@ -1,12 +1,15 @@
 package com.quodex.dineboard.service;
 
-import com.quodex.dineboard.dto.MenuDTO;
+import com.quodex.dineboard.mapper.MenuMapper;
+import com.quodex.dineboard.mapper.MenuViewMapper;
+import com.quodex.dineboard.dto.request.MenuViewRequest;
+import com.quodex.dineboard.dto.request.MenuRequest;
+import com.quodex.dineboard.dto.response.MenuResponse;
 import com.quodex.dineboard.exception.DineBoardException;
 import com.quodex.dineboard.model.Hotel;
 import com.quodex.dineboard.model.Menu;
-import com.quodex.dineboard.model.MenuView;
 import com.quodex.dineboard.repository.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
@@ -14,146 +17,138 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
-public class MenuServiceImpl implements MenuService{
+@RequiredArgsConstructor
+public class MenuServiceImpl implements MenuService {
 
-    @Autowired
-    private MenuRepository menuRepository;
+    private final MenuRepository menuRepository;
+    private final HotelRepository hotelRepository;
+    private final MenuItemRepository menuItemRepository;
+    private final CategoryRepository categoryRepository;
+    private final QRCodeRepository qrCodeRepository;
+    private final MenuViewRepository menuViewRepository;
 
-    @Autowired
-    private HotelRepository hotelRepository;
-
-    @Autowired
-    private MenuItemRepository menuItemRepository;
-    @Autowired
-    private CategoryRepository categoryRepository;
-
-    @Autowired
-    private QRCodeRepository qrCodeRepository;
-
-    @Autowired
-    private MenuViewRepository menuViewRepository;
-
-
+    //  Create Menu
     @Override
-    public MenuDTO createMenu(MenuDTO menuDTO) throws DineBoardException {
-        Hotel hotel = hotelRepository.findById(menuDTO.getHotelId())
+    public MenuResponse createMenu(MenuRequest request) throws DineBoardException {
+        Hotel hotel = hotelRepository.findById(request.getHotelId())
                 .orElseThrow(() -> new RuntimeException("Hotel not found"));
 
         int currentMenus = menuRepository.findByHotelId(hotel.getId()).size();
-        int allowedMenus = hotel.getPlan() != null ? hotel.getPlan().getAllowedMenus() : 2;  // Default to 2 if no plan is assigned
+        int allowedMenus = (hotel.getPlan() != null && hotel.getPlan().getAllowedMenus() != null)
+                ? hotel.getPlan().getAllowedMenus()
+                : 2; // Default to 2 if no plan assigned
 
         if (currentMenus >= allowedMenus) {
             throw new DineBoardException("MENU_LIMIT_REACHED");
         }
 
-        Menu menu = new Menu();
-        menu.setId(UUID.randomUUID().toString());
-        menu.setTitle(menuDTO.getTitle());
-        menu.setHotel(hotel);
-        menu.setIsPublished(false);
+        Menu menu = MenuMapper.toEntity(request, hotel);
         menu.setCreatedAt(LocalDateTime.now());
         menu.setUpdatedAt(LocalDateTime.now());
         menu.setViewCount(0);
+        menu.setUniqueDeviceCount(0);
 
-        return menuRepository.save(menu).toDTO();
+        menu = menuRepository.save(menu);
+        return MenuMapper.toResponse(menu);
     }
 
-
-    private int getAllowedMenusForPlan(Integer planId) {
-        if (planId == null) {
-            return 1; // Default to BASIC if null
-        }
-
-        return switch (planId) {
-            case 1 -> 1; // BASIC
-            case 2 -> 5; // PRO
-            case 3 -> 10; // SUPER
-            default -> 1; // Default fallback
-        };
-    }
-
-
+    //  Get menu by ID
     @Override
-    public MenuDTO getMenuById(String id) {
-        return menuRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Menu not found"))
-                .toDTO();
+    public MenuResponse getMenuById(String id) {
+        Menu menu = menuRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Menu not found"));
+        return MenuMapper.toResponse(menu);
     }
 
+    //  Get all menus
     @Override
-    public List<MenuDTO> getAllMenus() {
-        return menuRepository.findAll().stream()
-                .map(Menu::toDTO)
-                .collect(Collectors.toList());
+    public List<MenuResponse> getAllMenus() {
+        return menuRepository.findAll()
+                .stream()
+                .map(MenuMapper::toResponse)
+                .toList();
     }
 
-    public List<MenuDTO> getMenusByHotel(Long hotelId) {
-        // Fetch the hotel to ensure it exists
-        Hotel hotel = hotelRepository.findById(hotelId)
-                .orElseThrow(() -> new RuntimeException("Hotel Not Found"));
-
-        // Fetch all menus for the hotel
-        return menuRepository.findByHotelId(hotelId).stream()
-                .map(Menu::toDTO)
-                .collect(Collectors.toList());
-    }
-
+    //  Get menus by hotel
     @Override
-    public MenuDTO updateMenu(String id, MenuDTO menuDTO) {
+    public List<MenuResponse> getMenusByHotel(String hotelId) {
+        // Verify hotel exists
+        hotelRepository.findById(hotelId)
+                .orElseThrow(() -> new RuntimeException("Hotel not found"));
+
+        return menuRepository.findByHotelId(hotelId)
+                .stream()
+                .map(MenuMapper::toResponse)
+                .toList();
+    }
+
+    //  Update existing menu
+    @Override
+    public MenuResponse updateMenu(String id, MenuRequest request) {
         Menu menu = menuRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Menu not found"));
 
-        menu.setTitle(menuDTO.getTitle());
-        menu.setIsPublished(menuDTO.getIsPublished());
+        Hotel hotel = hotelRepository.findById(request.getHotelId())
+                .orElseThrow(() -> new RuntimeException("Hotel not found"));
+
+        // Update fields
+        menu.setTitle(request.getTitle());
+        menu.setHotel(hotel);
+        menu.setPublished(request.isPublished());
         menu.setUpdatedAt(LocalDateTime.now());
 
-        return menuRepository.save(menu).toDTO();
+        // Optional counters update
+        if (request.getViewCount() != 0) {
+            menu.setViewCount(request.getViewCount());
+        }
+        if (request.getUniqueDeviceCount() != 0) {
+            menu.setUniqueDeviceCount(request.getUniqueDeviceCount());
+        }
+
+        menu = menuRepository.save(menu);
+        return MenuMapper.toResponse(menu);
     }
 
+    //  Delete menu (and cascade delete related data manually)
     @Override
     public void deleteMenu(String menuId) {
         Menu menu = menuRepository.findById(menuId)
                 .orElseThrow(() -> new RuntimeException("Menu not found"));
 
-        // Manually delete associated MenuItems
-        menuItemRepository.deleteByMenu(menu); // Assuming you have a method like this in your MenuItemRepository
+        // Delete associated entities first to prevent FK constraint issues
+        menuItemRepository.deleteByMenu(menu);
         categoryRepository.deleteByMenu(menu);
         qrCodeRepository.deleteByMenu(menu);
+
         menuRepository.delete(menu);
     }
 
-
-@Override
+    //  Track menu views (with IST timezone)
+    @Override
     public void trackMenuView(String menuId) {
         Menu menu = menuRepository.findById(menuId)
                 .orElseThrow(() -> new RuntimeException("Menu not found"));
 
         ZoneId indiaZone = ZoneId.of("Asia/Kolkata");
-
-        // Get today's start and end in IST
         LocalDate today = LocalDate.now(indiaZone);
         ZonedDateTime startOfDay = today.atStartOfDay(indiaZone);
         ZonedDateTime endOfDay = today.plusDays(1).atStartOfDay(indiaZone);
 
-        // Count views in IST range
+        // Count today's views
         long todayViewCount = menuViewRepository.countByMenuIdAndCreatedAtBetween(
                 menuId,
                 startOfDay.toLocalDateTime(),
                 endOfDay.toLocalDateTime()
         );
 
-        // Save view with IST time
-        menuViewRepository.save(new MenuView(menuId, ZonedDateTime.now(indiaZone).toLocalDateTime()));
+        //  Save a new view record (mapper handles timestamp)
+        menuViewRepository.save(MenuViewMapper.toEntity(new MenuViewRequest(), menu));
 
-        // Update menu stats
+        //  Update stats
         menu.setViewCount((int) todayViewCount + 1);
-        menu.setUpdatedAt(ZonedDateTime.now(indiaZone).toLocalDateTime());
+        menu.setUpdatedAt(LocalDateTime.now(indiaZone));
         menuRepository.save(menu);
     }
-
-
 }
