@@ -1,36 +1,33 @@
 package com.quodex.dineboard.service;
 
-import com.quodex.dineboard.dto.QRCodeDTO;
+import com.quodex.dineboard.mapper.QRCodeMapper;
+import com.quodex.dineboard.dto.request.QRCodeRequest;
+import com.quodex.dineboard.dto.response.QRCodeResponse;
 import com.quodex.dineboard.model.Hotel;
 import com.quodex.dineboard.model.Menu;
 import com.quodex.dineboard.model.QRCode;
 import com.quodex.dineboard.repository.HotelRepository;
 import com.quodex.dineboard.repository.MenuRepository;
 import com.quodex.dineboard.repository.QRCodeRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.Base64;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class QRCodeServiceImpl implements QRCodeService {
 
     private final QRCodeRepository qrCodeRepository;
     private final MenuRepository menuRepository;
     private final HotelRepository hotelRepository;
 
-
-    @Autowired
-    public QRCodeServiceImpl(QRCodeRepository qrCodeRepository, MenuRepository menuRepository,
-                             HotelRepository hotelRepository) {
-        this.qrCodeRepository = qrCodeRepository;
-        this.menuRepository = menuRepository;
-        this.hotelRepository = hotelRepository;
-    }
-
     private byte[] decodeBase64Image(String base64) {
+        if (base64 == null || base64.isBlank()) {
+            return null;
+        }
+        // Remove data URI prefix if present
         if (base64.contains(",")) {
             base64 = base64.substring(base64.indexOf(",") + 1);
         }
@@ -38,52 +35,64 @@ public class QRCodeServiceImpl implements QRCodeService {
     }
 
     @Override
-    public List<QRCodeDTO> getAllQRCodes() {
+    public List<QRCodeResponse> getAllQRCodes() {
         return qrCodeRepository.findAll()
                 .stream()
-                .map(QRCode::toDTO)
-                .collect(Collectors.toList());
+                .map(QRCodeMapper::toResponse)
+                .toList();
     }
 
     @Override
-    public QRCodeDTO getQRCodeById(Long id) {
+    public QRCodeResponse getQRCodeById(String id) {
         QRCode qrCode = qrCodeRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("QR Code not found with id: " + id));
-        return qrCode.toDTO();
+        return QRCodeMapper.toResponse(qrCode);
     }
 
     @Override
-    public QRCodeDTO createQRCode(QRCodeDTO dto) {
+    public QRCodeResponse createQRCode(QRCodeRequest dto) {
         Menu menu = menuRepository.findById(dto.getMenuId())
                 .orElseThrow(() -> new RuntimeException("Menu not found with id: " + dto.getMenuId()));
+
         Hotel hotel = hotelRepository.findById(dto.getHotelId())
-                .orElseThrow(() -> new RuntimeException("Hotel not found with id: "+dto.getHotelId()));
-        if (dto.getUrl() != null && !dto.getUrl().isEmpty()) {
+                .orElseThrow(() -> new RuntimeException("Hotel not found with id: " + dto.getHotelId()));
+
+        if (dto.getUrl() != null && !dto.getUrl().isBlank()) {
             dto.setUrlBytes(decodeBase64Image(dto.getUrl()));
         }
-        QRCode qrCode = dto.toEntity(menu, hotel);
-        return qrCodeRepository.save(qrCode).toDTO();
+
+        QRCode qrCode = QRCodeMapper.toEntity(dto, menu, hotel);
+        qrCode = qrCodeRepository.save(qrCode);
+        return QRCodeMapper.toResponse(qrCode);
     }
 
     @Override
-    public QRCodeDTO updateQRCode(Long id, QRCodeDTO dto) {
+    public QRCodeResponse updateQRCode(String id, QRCodeRequest dto) {
         QRCode qrCode = qrCodeRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("QR Code not found with id: " + id));
+
         Menu menu = menuRepository.findById(dto.getMenuId())
                 .orElseThrow(() -> new RuntimeException("Menu not found with id: " + dto.getMenuId()));
 
-        if (dto.getUrl() != null && !dto.getUrl().isEmpty()) {
+        Hotel hotel = hotelRepository.findById(dto.getHotelId())
+                .orElseThrow(() -> new RuntimeException("Hotel not found with id: " + dto.getHotelId()));
+
+        if (dto.getUrl() != null && !dto.getUrl().isBlank()) {
             dto.setUrlBytes(decodeBase64Image(dto.getUrl()));
         }
+
         qrCode.setLabel(dto.getLabel());
         qrCode.setMenu(menu);
+        qrCode.setHotel(hotel);
         qrCode.setUrl(dto.getUrl());
+        qrCode.setUrlBytes(dto.getUrlBytes());
 
-        return qrCodeRepository.save(qrCode).toDTO();
+        qrCode = qrCodeRepository.save(qrCode);
+        return QRCodeMapper.toResponse(qrCode);
     }
 
     @Override
-    public void deleteQRCode(Long id) {
+    public void deleteQRCode(String id) {
         if (!qrCodeRepository.existsById(id)) {
             throw new RuntimeException("QR Code not found with id: " + id);
         }
@@ -91,10 +100,10 @@ public class QRCodeServiceImpl implements QRCodeService {
     }
 
     @Override
-    public List<QRCodeDTO> getQRCodesByMenuId(String menuId) {
+    public List<QRCodeResponse> getQRCodesByMenuId(String menuId) {
         return qrCodeRepository.findByMenuId(menuId)
                 .stream()
-                .map(QRCode::toDTO)
-                .collect(Collectors.toList());
+                .map(QRCodeMapper::toResponse)
+                .toList();
     }
 }
